# fabled

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.bat  city.bat  dressing.bat  editor.bat  errors.md  host.bat  testkenney.bat  update2.md  update3.md
.claude/: settings.local.json
.cursor/: BUGBOT.md
assets/characters/: character_medic.glb  character_scout.glb  character_soldier.glb  character_tech.glb
assets/models/: character_medium.glb  kenney_kits_index.json
assets/models/dungeon/: kenney_catalog.json
assets/models/space/: gate-lasers-edited.glb  kenney_catalog.json  template-floor-hole.glb
assets/shaders/: terrain.wgsl
crates/client/: Cargo.toml
crates/client/src/: audio.rs  character_animation.rs  city_viewer.rs  class_select.rs  darkness.rs  display_settings.rs  door_anim.rs  editor_floor.rs  editor_history.rs  editor_map_gen.rs  editor_ops.rs  editor_playtest.rs  editor_selection.rs  editor_sidebar.rs  editor_state.rs  editor_ui.rs  editor_workspace.rs  floor_debug.rs  fly_camera.rs  fog_noise.rs  hotbar.rs  kenney_editor.rs  level_render.rs  lib.rs  minimap.rs  netplay.rs  process_spawn.rs  prop_render.rs  run_ui.rs  sewer_atmosphere.rs  terrain_render.rs  test_showcase.rs  tunnel_mesh.rs  villager_ui.rs  villagers.rs  water_render.rs
crates/server/: Cargo.toml
crates/server/src/: character.rs  combat.rs  grab.rs  items.rs  level.rs  lib.rs  liquids.rs  map_stream.rs  players.rs  run.rs  village_live.rs
crates/shared/: Cargo.toml
crates/shared/src/: classes.rs  config.rs  editor_catalog.rs  editor_map.rs  editor_settings.rs  hidden_door.rs  items.rs  kenney_catalog.rs  kenney_hub.rs  kenney_layout.rs  kenney_pit.rs  kenney_transitions.rs  level.rs  lib.rs  map_pool.rs  props.rs  run.rs  (+4 more)
crates/sim/: Cargo.toml
docs/: faction_assets.md  faction_roster.md  game-pitch.md  handoff-procgen-phase2.md  handover-factions-2026-06-22.md  handover-synth-2026-06-23.md  hub-extraction-agent-failures.md  kenney_kits_catalogue.md  kenney_space_kit.md  procgen-faction-manifest.md  procgen-zone-composition.md  session-handover-freeform.md  synth-master-plan.md  synth-transition-architecture.md
src/: main.rs
tools/: _diag_access.py  _diag_baddoor.py  _diag_boundtrace.py  _diag_enclose.py  _diag_floatdoor.py  _diag_floors.py  _diag_spot.py  _diag_synth.py  _diag_trans.py  _inspect_integrity.py  _inspect_seed1_full.py  _inspect_seed1_integrity.py  _inspect_seed6.py  _probe_lowwalls.py  _probe_rail.py  _probe_stairs.py  _probe_uv.py  _render_decor.py  _render_map.py  _render_zoom.py  _scan_wide.py  _verify_rails.py  audit_synth_scene.py  backfill_border_exits.py  bake_tinted_colormap.py  combine_orm.ps1  debug_map_placement.py  embed_kenney_textures.py  export_characters.py  extract_kenney_kits.py  faction_assets.py  faction_profiles.py  fetch_cyberpunk_textures.ps1  gen_balcony_test.py  gen_dressing_furnished.py  gen_dressing_rating_map.py  gen_dressing_showcase.py  gen_dressing_templates.py  gen_floor_detail.py  gen_freeform.py  (+36 more)
userinput/: _zone_test.json  anth.txt  bentpipe.txt  kenney_layout.json  update1.txt  wall_map.json  wall_map_verify.txt
userinput/factions/: industrial_default.json  necropolis.json  outlaw.json  priesthood.json  space_default.json  synth.json
userinput/maps/: _editor_preview.json  _probe_tmp.json  _synth_enter.json  _synth_first.json  _synth_first2.json  _synth_next.json  _transition_test.json  gen_map_0619193739.json  level_stretch.json  map_1781820390.json
userinput/synth_dressing/: README.md  balcony_test.json  bunk.json  bunk_furnished_c.json  interior_rating_20.json  interior_showcase.json  lab.json  lab_furnished_c.json  office_furnished_c.json  synth.json  synth2.json  template_bunk.json  template_corridor.json  template_lab.json  template_mess.json  template_office.json
(+1413 files in other folders)
