[workspace]
members = ["crates/shared", "crates/server", "crates/client"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
bevy = "0.18"
clap = { version = "4", features = ["derive"] }
shared = { path = "crates/shared" }
server = { path = "crates/server" }
client = { path = "crates/client" }

[package]
name = "fabled"
version.workspace = true
edition.workspace = true

[dependencies]
bevy.workspace = true
clap.workspace = true
shared.workspace = true
server.workspace = true
client.workspace = true

# Fast iterative builds: dependencies optimized, our code compiles fast.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
