[workspace]
members = ["crates/shared", "crates/server", "crates/client"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
bevy = "0.18"
# default-features off: drops collider-from-mesh (needs asset events that a
# headless server doesn't have) and picking/debug extras we don't use.
avian3d = { version = "0.6", default-features = false, features = ["3d", "f32", "parry-f32"] }
clap = { version = "4", features = ["derive"] }
shared = { path = "crates/shared" }
server = { path = "crates/server" }
client = { path = "crates/client" }

[package]
name = "fabled"
version.workspace = true
edition.workspace = true

[dependencies]
bevy.workspace = true
clap.workspace = true
shared.workspace = true
server.workspace = true
client.workspace = true

# Fast iterative builds: dependencies optimized, our code compiles fast.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
