[package]
name = "client"
version.workspace = true
edition.workspace = true

[features]
village = []

[dependencies]
bevy.workspace = true
bevy_replicon.workspace = true
avian3d.workspace = true
shared.workspace = true
bevy_hanabi = { version = "0.18", default-features = false, features = ["3d"] }
bevy_water = "0.18"
serde_json.workspace = true
